# apps/backend/src/matching/dto/join-match.dto.ts
@@ -1,1 +1,0 @@
-export class JoinMatchDto {}
